# step3

./: .dockerignore  .gitignore  README.md  test.ipynb
conf/: cloud_logger_config.yaml  features_config.yaml  hydra_config.yaml  inference_config.yaml  removal_export_config.yaml
conf/features/: build.yaml  card.yaml  retrieve.yaml  upload_for_annotation.yaml  upload_from_annotation.yaml
conf/general/: area.yaml  cloud.yaml  paths.yaml  settings.yaml  tokens.yaml
conf/inference/: predict.yaml
conf/removal_export/: export.yaml  image_removal.yaml  location_removal.yaml
modules/feature_pipeline/: .env.example  Dockerfile  Makefile  README.md  config_model.py  main.py  pyproject.toml
modules/feature_pipeline/osm_utils/: README.md
modules/feature_pipeline/osm_utils/graph/: algorithms.py  contract_graph.py  graph.py  graph_types.py  graphfactory.py
modules/feature_pipeline/osm_utils/osm/: read_osm.py  sanitize_input.py  way_parser_helper.py  xml_handler.py
modules/feature_pipeline/osm_utils/utils/: converter.py  geo_tools.py  write_graph.py
modules/feature_pipeline/scripts/: load_env.sh
modules/feature_pipeline/terraform/: main.tf  terraform.auto copy.tfvars  terraform.auto.tfvars  variables.tf
modules/feature_pipeline/tools/: feature_pipeline.py
modules/feature_pipeline/utils/: build_utils.py  card_utils.py  checks_utils.py  cloud_utils.py  general_utils.py  logging_utils.py  merge_utils.py  polygon_reader_utils.py  polygon_readers.py  retrieve_utils.py  upload_utils.py  viz_utils.py
modules/feature_pipeline/utils/finder_utils/: find.js  run.py
modules/inference_pipeline/: .env.example  Dockerfile  Makefile  README.md  config_model.py  main.py  pyproject.toml
modules/inference_pipeline/network_configs/: model_config.py
modules/inference_pipeline/scripts/: build_push.sh  destroy.sh
modules/inference_pipeline/terraform/: main.tf  terraform.auto copy.tfvars  terraform.auto.tfvars
modules/inference_pipeline/terraform/cloud_functions/: main.py
modules/inference_pipeline/tools/: inference_pipeline.py
modules/inference_pipeline/utils/: checks_utils.py  cloud_utils.py  dataset_utils.py  general_utils.py  logger.py  prediction_utils.py
modules/removal_export_pipeline/: Dockerfile  README.md  config_model.py  main.py  pyproject.toml  requirements.txt
modules/removal_export_pipeline/image_matching/hloc/: __init__.py  extract_features.py  match_dense.py  match_features.py  visualization.py
modules/removal_export_pipeline/image_matching/hloc/extractors/: darkfeat.py  dedode.py  superpoint.py
modules/removal_export_pipeline/image_matching/hloc/utils/: __init__.py  (+3 more)
modules/removal_export_pipeline/image_matching/ui/: api.py  config.yaml  sfm.py  utils.py  viz.py
modules/removal_export_pipeline/scripts/: build_push.sh  destroy.sh  load_env.sh
modules/removal_export_pipeline/terraform/: main.tf  terraform.auto copy.tfvars  terraform.auto.tfvars  variables.tf
modules/removal_export_pipeline/terraform/cloud_functions/: requirements.txt
modules/removal_export_pipeline/tools/: removal_export_pipeline.py
modules/removal_export_pipeline/utils/: cloud_utils.py  duplicate_utils.py  export_utils.py  general_utils.py  image_matching_conf.py  location_duplicates_utils.py  logging_utils.py
modules/removal_export_pipeline/utils/location_estimator/: aggregate.py  buildingmanager.py  estimator.py  latlng.py  mapping.py
modules/training_pipeline/: Co-DETR.ipynb  README.md  coco.py  model_config.py
tools/: analyze_gcs_building_file.py  check_building_data.py  config_args_generator.py  consolidate_sa_buildings.py  coordinate_converter.py  copy_polygone.sh  copy_ward_to_zone.sh  copy_zone_to_ward.sh  create_ward_subzone_polygons.sh  dowload_data.ipynb  download_south_africa_buildings.py  duplicates_review.py  extract_per_job.py  extract_quartire.py  filter_buildings.py  find_johannesburg_tiles.py  gcp_data_analyzer.py  generate_arg.py  generate_arg_inference.py  generate_arg_remove.py  geojson_inverter.py  geojson_ward_splitter.py  job_generator.py  job_generator_inference.py  job_generator_removal.py  johannesburg_ward_processor.py  list_rf_images.py  product_details.py  regions_display.py  split_area.py  split_area_equivalent_area.py  split_wards_for_removal.py  supprimer.sh  verif_path.sh  ward_coordinates_arg.py  ward_subdivider.py
tools/consolidation/: consolidate_all_johannesburg.sh  copy_all_images.sh  install_dependencies.sh  merge_all_annotations.sh  merge_cards.sh  merge_deliverables_excel.sh  merge_html_into_one.sh  merge_johannesburg_final.sh  merge_osm_graphs.sh  merge_sv_graphs.sh
tools/geomapping_cpg_annotations-12/: README.roboflow.txt
